Setting version to 0.1.0

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "newbury/alexa-app",
-    "description": "Base applucation for creating an Amazon Alexa Skil using the newbury/alexa-framework library.",
+    "description": "Base application for creating an Amazon Alexa Skill using the newbury/alexa-framework library.",
     "type": "project",
+    "version": "0.1.0",
     "require": {
         "newbury/alexa-framework": "^0.1.0"
     },
